packages/devops/1a/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
spec:
  selector:
    app: mongo
  ports:
  - protocol: "TCP"
    port: 27017
    targetPort: 27017
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: "mongo:latest"
        ports:
        - containerPort: 27017
