packages/devops/1a/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: monorift
  labels:
    app: monorift
spec:
  rules:
  - http:
      paths:
      - path: /mr
        backend:
          serviceName: mr-svc
          servicePort: 8080
  - http:
      paths:
      - path: /svc
        backend:
          serviceName: node-svc
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mr-svc
  labels:
    app: monorift
spec:
  type: NodePort
  selector:
    app: monorift
  ports:
  - port: 8080
    targetPort: 8080
